--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,14 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="en">
 <head>
-  <title>Mytraining</title>
-  <%= stylesheet_link_tag :all %>
-  <%= javascript_include_tag :defaults %>
-  <%= csrf_meta_tag %>
+    <meta charset="utf-8"/>
+    <title>Up To Speed</title>
+    <%= stylesheet_link_tag :all %>
+    <meta name="viewport" content="initial-scale=1.0, width=device-width, maximum-scale=1.0"/>
+    <%= javascript_include_tag :defaults %>
+    <%= csrf_meta_tag %>
 </head>
 <body>
-
-<%= yield %>
-
+    <%= yield %>
 </body>
 </html>
