Updated scaffold mark-up and tested with some css

--- a/app/views/trainings/_form.html.erb
+++ b/app/views/trainings/_form.html.erb
@@ -10,7 +10,7 @@
       </ul>
     </div>
   <% end %>
-
+<article>
   <div class="field">
     <%= f.label :start_time %><br />
     <%= f.datetime_select :start_time %>
@@ -30,4 +30,5 @@
   <div class="actions">
     <%= f.submit %>
   </div>
+</article>
 <% end %>
