--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,7 +6,7 @@
     <%= stylesheet_link_tag :all %>
     <meta name="viewport" content="initial-scale=1.0, width=device-width, maximum-scale=1.0"/>
     <%= javascript_include_tag "http://ajax.googleapis.com/ajax/libs/jquery/1.4/jquery.min.js" %>
-    <%= javascript_include_tag "rails" %>
+    <%= javascript_include_tag "rails", "application" %>
     <%= csrf_meta_tag %>
 </head>
 <body>
