Test deploy with datetime input

--- a/app/views/trainings/_form.html.erb
+++ b/app/views/trainings/_form.html.erb
@@ -14,6 +14,7 @@
   <div class="field">
     <%= f.label :start_time %><br />
     <%= f.datetime_select :start_time %>
+    <input type="datetime">
   </div>
   <div class="field">
     <%= f.label :end_time %><br />
