--- a/app/views/trainings/index.html.erb
+++ b/app/views/trainings/index.html.erb
@@ -41,4 +41,4 @@
 <% end %>
 </section>
 <!--<button>Senare</button>-->
-<%= link_to 'New Training', new_training_path %>
+<%= link_to 'New Training', new_training_path, :class => "action-button" %>
