--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -259,7 +259,15 @@ input[type=text]:focus{
 input[type=submit]{
     
 }
-
+a.action-button{
+    background-color:#003333;
+    -moz-border-radius:4px;
+    -webkit-border-radius:4px;
+    border-radius:4px;
+    color:#fff;
+    padding:10px 10px;
+    text-shadow:0 2px 1px rgba(0,102,102,0.8);
+}
 div.field{
     padding:0 0 20px 0;
 }
