--- a/app/views/trainings/_form.html.erb
+++ b/app/views/trainings/_form.html.erb
@@ -13,8 +13,13 @@
 <article>
   <div class="field">
     <%= f.label :start_time %><br />
-    <%= f.datetime_select :start_time %>
+    <!--<%= f.datetime_select :start_time %>-->
+    <label>datetime</label>
     <input type="datetime">
+    <label>date</label>
+    <input type="date">
+    <label>time</label>
+    <input type="time">
   </div>
   <div class="field">
     <%= f.label :end_time %><br />
