--- a/app/views/trainings/_form.html.erb
+++ b/app/views/trainings/_form.html.erb
@@ -14,12 +14,12 @@
   <div class="field">
     <%= f.label :start_time %><br />
     <!--<%= f.datetime_select :start_time %>-->
-    <label>datetime</label>
-    <input type="datetime">
     <label>date</label>
     <input type="date">
     <label>time</label>
     <input type="time">
+    <label>Längd <span id="minutes-display">()</span></label>
+    <input type="range" id="minutes" min="10" step="5" value="60" max="300">
   </div>
   <div class="field">
     <%= f.label :end_time %><br />
