Implemented test of jQuery UI

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,10 +3,10 @@
 <head>
     <meta charset="utf-8"/>
     <title>Up To Speed</title>
-    <%= stylesheet_link_tag :all %>
+    <%= stylesheet_link_tag "application","jquery-ui/ui-lightness/jquery-ui-1.8.6.custom" %>
     <meta name="viewport" content="initial-scale=1.0, width=device-width, maximum-scale=1.0"/>
     <%= javascript_include_tag "http://ajax.googleapis.com/ajax/libs/jquery/1.4/jquery.min.js" %>
-    <%= javascript_include_tag "rails", "application" %>
+    <%= javascript_include_tag "rails", "application", "jquery-ui/jquery-ui-1.8.6.custom.min.js" %>
     <%= csrf_meta_tag %>
 </head>
 <body>
