--- a/app/views/trainings/show.html.erb
+++ b/app/views/trainings/show.html.erb
@@ -2,12 +2,12 @@
 
 <p>
   <b>Start time:</b>
-  <%= @training.start_time %>
+  <%= @training.start_at %>
 </p>
 
 <p>
   <b>End time:</b>
-  <%= @training.end_time %>
+  <%= @training.end_at %>
 </p>
 
 <p>
