--- a/app/views/trainings/_form.html.erb
+++ b/app/views/trainings/_form.html.erb
@@ -1,41 +1,38 @@
 <%= form_for(@training) do |f| %>
-  <% if @training.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@training.errors.count, "error") %> prohibited this training from being saved:</h2>
+<% if @training.errors.any? %>
+<div id="error_explanation">
+    <h2><%= pluralize(@training.errors.count, "error") %> prohibited this training from being saved:</h2>
 
-      <ul>
-      <% @training.errors.full_messages.each do |msg| %>
+    <ul>
+        <% @training.errors.full_messages.each do |msg| %>
         <li><%= msg %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
+        <% end %>
+    </ul>
+</div>
+<% end %>
 <article>
-  <div class="field">
-    <%= f.label :start_time %><br />
-    <!--<%= f.datetime_select :start_time %>-->
-    <label>date</label>
-    <input type="date" class="datepicker">
-    <label>time</label>
-    <input type="time">
-    <label>Längd (<span id="minutes-display"></span>)</label>
-    <input type="number" id="minutes" min="10" max="300" step="5" value="60">
-    <div id="minutes-slider" class="slider" data-for="minutes"></div>
-  </div>
-  <div class="field">
-    <%= f.label :end_time %><br />
-    <%= f.datetime_select :end_time %>
-  </div>
-  <div class="field">
-    <%= f.label :title %><br />
-    <%= f.text_field :title %>
-  </div>
-  <div class="field">
-    <%= f.label :location %><br />
-    <%= f.text_field :location %>
-  </div>
-  <div class="actions">
-    <%= f.submit %>
-  </div>
+    <div class="field">
+        <%= f.label :title %><br />
+        <%= f.text_field :title %>
+    </div>
+    <div class="field">
+        <%= f.label :location %><br />
+        <%= f.text_field :location %>
+    </div>
+    <div class="field">
+        <%= f.label :start_date %><br />
+        <%= f.text_field :start_date, :type => "date", :class => "datepicker" %>
+    </div>
+    <div class="field">
+        <%= f.label :start_time %>
+        <%= f.text_field :start_time, :placeholder => 'hh:mm' %>
+    </div>
+    <div class="field">
+        <label>Längd (<span id="training_duration-display"></span>)</label>
+        <%= f.text_field :duration, :type => "number", :min => "10", :max => "300", :step => "5" %>
+    </div>
+    <div class="actions">
+        <%= f.submit %>
+    </div>
 </article>
 <% end %>
