--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -51,7 +51,7 @@ figure img {width: 100%;}
 	line-height: 1.5px;
 }
 .normal, body {
-	font: 16px/1.5 Helvetica, Arial, sans-serif;
+	font: 13px/1.5 Helvetica, Arial, sans-serif;
 }
 .small, small {
 	font-size: 13px;
@@ -70,14 +70,14 @@ a{
     margin:0 auto;
 }
 article{
-    padding:14px 0 14px;
+    padding:10px 0;
     border-bottom:1px solid #f1f1f1; 
 }
 article:last-child{
     border-bottom:none;
 }
 section{
-    padding:10px 24px;
+    padding:0px 10px;
     background-color:#fff;
     -moz-border-radius:10px;
     -webkit-border-radius:10px;
@@ -85,63 +85,40 @@ section{
     margin-bottom:40px;
 }
 article header h1{
-    /*float:left;*/
-    color:#863261;
-    font-size:22px;    
+    font-size:16px;    
 }
-/*article header time.day{
-    float:left;
-    text-align:center;
-    display:inline-block;
-    border-top:2px solid #f1f1f1;
-    border-bottom:2px solid #f1f1f1;
-    background:#fff;
-    padding:12px;
-    overflow:hidden;
-    line-height:24px;
-    -moz-border-radius:4px;
-    margin-right:24px;
-}*/
+/*Date time area in list*/
 article header time.day{
     display:block;
+    font-weight:bold;
+    margin-bottom:10px;
 }
 header time.day span:first-child{
-    color:#91bd09;
-    text-shadow:0 2px 1px rgba(145,189,9,0.2);
-    font-size:24px;
-    font-weight:bold;
+    color:#fff;
+    background-color:#91bd09;
+    font-size:13px;
+    padding-right:5px;
+    padding:5px;
+    width:60px;
+    display:inline-block;
+    text-align:center;
+    -moz-border-radius:4px;
+    border-radius:4px;
 }
-header time.day span:last-child{
-    margin-top:-6px;
-    font-size:16px;
-    line-height:16px;
-    display:block;
-}
-div.training{
-    /*margin-top:-40px;*/
-    /*margin-left:72px;*/
-}
-span.done{
-    margin-top:-4px;
-    display:block;
-}
-span.done strong{
-    font-size:1.2em;
-}
+/*top status bar*/
 div.status{
+    padding:5px 10px;
     text-align:right;
-    padding:4px 24px;
-    -moz-border-radius:0 0 4px 4px;
-    margin:8px 0;
-    text-shadow:0px 2px 1px rgba(0,0,0,0.1);
+    color:#333;
 }
-.training-item{
-    padding-bottom:0px;
-    line-height:30px;
+div.status .points{
+    font-size:20px;
+    color:#003333;
 }
-.training-item span.name{
-    float:left;
+div.status .name{
+    padding-right:5px;
 }
+/*Enable disable links*/
 .enable-disable{
     float:right;
     display:inline-block;
@@ -181,35 +158,6 @@ div.status{
 .cb-disable.selected span{color: #fff; }
 .cb-enable.selected span {color: #fff; }
 .training-item label { cursor: pointer; }
-.training-item input { display: none; }
-nav{
-    background:#fff;
-    -moz-box-shadow:0 1px 1px 0 rgba(0, 0, 0, 0.1);
-    -webkit-box-shadow:0 1px 0 0 rgba(0, 0, 0, 0.1);
-    box-shadow:0 1px 0 0 rgba(0, 0, 0, 0.1);
-}
-nav ul{
-    list-style-type:none;
-    margin:0;
-    padding:0;
-}
-nav ul li{
-    float:left;
-    border-left:1px solid #F3F3F3;
-}
-nav ul li a{
-    padding:10px 12px 6px 12px;
-    display:block;
-}
-nav ul li.selected a,
-nav ul li a:hover{
-    padding-top:6px;
-    border-top:4px solid #863261;
-    background-color:#f1f1f1;
-}
-nav ul li a:hover{
-    border-top:4px solid #91BD09;
-}
 /*forms*/
 button{
     margin:14px 0;
@@ -240,7 +188,8 @@ button small{
     font-size:11px;
     display:block;
 }
-input[type=text]{
+input[type=text],
+input[type=date]{
     font-size:16px;
     width:100%;
     border:solid 1px #bcbbbb;
@@ -253,7 +202,8 @@ input[type=text]{
     box-shadow: inset 0 1px 2px rgba(0,0,0,.2);
     background-color:#fff;
 }
-input[type=text]:focus{
+input[type=text]:focus,
+input[type=date]:focus{
     background-color:#f8edf3;
 }
 input[type=submit]{
@@ -297,15 +247,10 @@ body {
 @media only screen and (max-width: 767px) {
 	
 	body {
-		padding: 48px 28px 0;
-		padding:14px;
-		width: 292px;
+		padding:10px 5px;
+		width: 300px;
 		font-size:13px;
-	}
-	article header h1{
-	    font-size:16px;
-	}
-	
+	}	
 }
 
 
