--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -191,7 +191,6 @@ button small{
 input[type=text],
 input[type=date]{
     font-size:16px;
-    width:100%;
     border:solid 1px #bcbbbb;
     padding:5px;
     -moz-border-radius:4px;
@@ -250,7 +249,11 @@ body {
 		padding:10px 5px;
 		width: 300px;
 		font-size:13px;
-	}	
+	}
+	input[type=text],
+    input[type=date]{
+        width:288px;
+    }
 }
 
 
