added link action styles

--- a/app/views/trainings/edit.html.erb
+++ b/app/views/trainings/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @training %> |
-<%= link_to 'Back', trainings_path %>
+<%= link_to 'Show', @training, :class => "action-button"  %>
+<%= link_to 'Back', trainings_path, :class => "action-button"  %>
