--- a/app/views/trainings/_form.html.erb
+++ b/app/views/trainings/_form.html.erb
@@ -28,7 +28,7 @@
         <%= f.text_field :start_time, :placeholder => 'hh:mm' %>
     </div>
     <div class="field">
-        <label>Längd (<span id="training_duration-display"></span>)</label>
+        <label>Längd (<span id="training_duration-display"></span> minutes)</label>
         <%= f.text_field :duration, :type => "number", :min => "10", :max => "300", :step => "5" %>
     </div>
     <div class="actions">
