--- a/app/views/trainings/show.html.erb
+++ b/app/views/trainings/show.html.erb
@@ -21,5 +21,5 @@
 </p>
 
 
-<%= link_to 'Edit', edit_training_path(@training) %> |
-<%= link_to 'Back', trainings_path %>
+<%= link_to 'Edit', edit_training_path(@training), :class => "action-button"  %>
+<%= link_to 'Back', trainings_path, :class => "action-button"  %>
