--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,10 @@
     <%= csrf_meta_tag %>
 </head>
 <body>
+    <% if notice.present? -%>
+    <div id="messages"><div id="notice"><p><%= notice %></p></div></div>
+    <div id="notice"></div>
+    <% end -%>
     <div id="container">
         <%= yield %>
     </div>
