--- a/app/views/trainings/_form.html.erb
+++ b/app/views/trainings/_form.html.erb
@@ -2,7 +2,6 @@
 <% if @training.errors.any? %>
 <div id="error_explanation">
     <h2><%= pluralize(@training.errors.count, "error") %> prohibited this training from being saved:</h2>
-
     <ul>
         <% @training.errors.full_messages.each do |msg| %>
         <li><%= msg %></li>
@@ -12,23 +11,23 @@
 <% end %>
 <article>
     <div class="field">
-        <%= f.label :title %><br />
+        <%= f.label :title, "Activity" %><br />
         <%= f.text_field :title %>
     </div>
     <div class="field">
-        <%= f.label :location %><br />
+        <%= f.label :location, "Location" %><br />
         <%= f.text_field :location %>
     </div>
     <div class="field">
-        <%= f.label :start_date %><br />
+        <%= f.label :start_date, "Start date" %><br />
         <%= f.text_field :start_date, :type => "date", :class => "datepicker" %>
     </div>
     <div class="field">
-        <%= f.label :start_time %>
+        <%= f.label :start_time, "Start time" %>
         <%= f.text_field :start_time, :placeholder => 'hh:mm' %>
     </div>
     <div class="field">
-        <label>Längd (<span id="training_duration-display"></span> minutes)</label>
+        <label>Training duration (<span id="training_duration-display"></span> minutes)</label>
         <%= f.text_field :duration, :type => "number", :min => "10", :max => "300", :step => "5" %>
     </div>
     <div class="actions">
