--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,10 +11,15 @@
 </head>
 <body>
     <% if notice.present? -%>
-    <div id="messages"><div id="notice"><p><%= notice %></p></div></div>
+    <div id="messages"><div id="notice"><p><span class="char">✔</span><%= notice %></p></div></div>
     <div id="notice"></div>
     <% end -%>
     <div id="container">
+        <% if @current_user %>
+        <div class="status vcard">
+            <p><span class="fn name"><%= @current_user.name %></span><!--(<%=@current_user.id%>)--><strong class="points"><%=@current_user.total_points%></strong> points</p>
+        </div>
+        <% end %>
         <%= yield %>
     </div>
 </body>
