--- a/app/views/trainings/edit.html.erb
+++ b/app/views/trainings/edit.html.erb
@@ -1,6 +1,8 @@
-<h1>Editing training</h1>
+<section>
+    <h1>Editing training</h1>    
+    <%= render 'form' %>
+</section>
+<div id="actions">
+    <%= link_to '« Trainings', trainings_path, :class => "action-button"  %>
+</div>
 
-<%= render 'form' %>
-
-<%= link_to 'Show', @training, :class => "action-button"  %>
-<%= link_to 'Back', trainings_path, :class => "action-button"  %>
