--- a/app/views/trainings/index.html.erb
+++ b/app/views/trainings/index.html.erb
@@ -1,8 +1,3 @@
-<% if @current_user %>
-<div class="status vcard">
-    <p><span class="fn name"><%= @current_user.name %></span><!--(<%=@current_user.id%>)--><strong class="points"><%=@current_user.total_points%></strong> points</p>
-</div>
-<% end %>
 <!--<button><span>Tidigare</span><small>Läs in föregående vecka</small></button>-->
 <section>
 <% @trainings.each do |training| %>
@@ -12,27 +7,31 @@
                 <span><%= training.start_at.to_s(:day) %> <%= training.start_at.to_s(:month_short) %></span>
                 <%= training.start_at.to_s(:time)%>-<%= training.end_at.to_s(:time)%>
             </time>
+            <% if workout = training.workout_for_person(@current_user) %>
+                <div class="training-item clearfix">
+                    <%= link_to(toggle_button(true), workout, :method => :delete, :class => "enable-disable", "data-status" => "enabled")%>
+                </div>
+            <% else %>
+                <%= form_for training.workouts.new(:person => @current_user) do |f| %>
+                    <%= f.hidden_field :person_id %>
+                    <%= f.hidden_field :training_id %>
+                    <div class="training-item clearfix">
+                        <%= link_to(toggle_button(false), workout, :method => :delete, :class => "enable-disable", "data-status" => "disabled") %>
+                    </div>
+                <% end %>   
+            <% end%>
             <h1><%= training.title %></h1>
         </header>
         <div class="training">
-        <% if workout = training.workout_for_person(@current_user) %>
-            <div class="training-item clearfix">
-                <span class="name"><strong><%= workout.points %></strong> poäng </span>
-                <%= link_to(toggle_button(true), workout, :method => :delete, :class => "enable-disable", "data-status" => "enabled")%>
-            </div>
-        <% else %>
-            <%= form_for training.workouts.new(:person => @current_user) do |f| %>
-                <%= f.hidden_field :person_id %>
-                <%= f.hidden_field :training_id %>
-                <div class="training-item clearfix">
-                    <%= link_to(toggle_button(false), workout, :method => :delete, :class => "enable-disable", "data-status" => "disabled") %>
-                </div>
-            <% end %>   
-        <% end%>
+            <% if workout = training.workout_for_person(@current_user) %>
+            <span class="points"><strong><%= workout.points %></strong> poäng </span>
+            <%end%>
             <span><%= training.location %></span>
         </div>
     </article>
 <% end %>
 </section>
 <!--<button>Senare</button>-->
-<%= link_to 'New Training', new_training_path, :class => "action-button" %>
+<div class="actions">
+    <%= link_to 'Add', new_training_path, :class => "action-button" %>
+</div>
