--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,11 @@
     <div id="container">
         <% if @current_user %>
         <div class="status vcard">
-            <p><span class="fn name"><%= @current_user.name %></span><!--(<%=@current_user.id%>)--><strong class="points"><%=@current_user.total_points%></strong> points</p>
+            <p>
+                <span class="fn name"><%= @current_user.name %></span>
+                <!--(<%=@current_user.id%>)-->
+                <strong class="points"><%=@current_user.total_points%></strong> points
+            </p>
         </div>
         <% end %>
         <%= yield %>
