--- a/app/views/trainings/index.html.erb
+++ b/app/views/trainings/index.html.erb
@@ -1,9 +1,9 @@
 <!--<button><span>Tidigare</span><small>Läs in föregående vecka</small></button>-->
 <section>
     <nav>
-        <%= link_to "Förra veckan", trainings_path(:week => (@date - 7.days).cweek), :class => "previous" %>
-        <span class="this-week">Vecka <%= @date.cweek %></span>
-        <%= link_to "Nästa vecka", trainings_path(:week => (@date + 7.days).cweek), :class => "next" %>
+        <%= link_to "« v.#{previous_week}", trainings_path(:week => previous_week), :class => "previous" %>
+        <span class="this-week">Vecka <%= this_week %></span>
+        <%= link_to "v.#{next_week} »", trainings_path(:week => next_week), :class => "next" %>
     </nav>
 <% @trainings.each do |training| %>
     <article>
